# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/day01/: CMakeLists.txt
src/day01/common/: InputConverter.cpp  InputConverter.h
src/day01/part1/: DistanceCalculator.cpp  DistanceCalculator.h  main.cpp
src/day01/part2/: SimilarityCalculator.cpp  SimilarityCalculator.h  main.cpp
src/day02/: CMakeLists.txt
src/day02/part1/: LevelChecker.cpp  LevelChecker.h  main.cpp
src/day02/part2/: Empty.cpp  LevelCheckerWithDampener.cpp  LevelCheckerWithDampener.h  main.cpp
src/day03/: CMakeLists.txt
src/day03/part1/: ComputerCalculator.cpp  ComputerCalculator.h  main.cpp
src/day03/part2/: ComputerCalculatorWithToggle.cpp  ComputerCalculatorWithToggle.h  main.cpp
src/day04/: CMakeLists.txt
src/day04/part1/: XMasSearch.cpp  XMasSearch.h  main.cpp
src/day04/part2/: X_MasSearch.cpp  X_MasSearch.h  main.cpp
src/day05/: CMakeLists.txt
src/day05/part1/: PrinterRuleset.cpp  PrinterRuleset.h  PrinterSW.cpp  PrinterSW.h  main.cpp
src/day05/part2/: PrinterFixingSW.cpp  PrinterFixingSW.h  PrinterRulesetWithCorrection.cpp  PrinterRulesetWithCorrection.h  main.cpp
src/day06/: CMakeLists.txt
src/day06/part1/: Guard.cpp  Guard.h  GuardMap.cpp  GuardMap.h  main.cpp
src/day06/part2/: GuardMapModified.cpp  GuardMapModified.h  GuardMapSolver.cpp  GuardMapSolver.h  GuardModified.cpp  GuardModified.h  main.cpp
test/: CMakeLists.txt  TestMain.cpp
test/day01/: CMakeLists.txt
test/day01/part1/: TestData.txt  TestDistanceCalculator.cpp
test/day01/part2/: TestSimilarityCalculator.cpp
test/day02/: CMakeLists.txt
test/day02/part1/: TestLevelChecker.cpp
test/day02/part2/: TestLevelCheckerWithDampener.cpp
test/day03/part1/: TestComputerPart1.cpp
test/day03/part2/: TestComputerPart2.cpp
test/day04/part1/: TestXMasSearch.cpp
test/day04/part2/: TestX_MasSearch.cpp
test/day05/part1/: TestPrinter.cpp
test/day05/part2/: TestPrinterFixing.cpp
test/day06/part1/: TestGuardPath.cpp
test/day06/part2/: TestEndlessLoops.cpp
